--- a/index.html
+++ b/index.html
@@ -102,7 +102,20 @@
 
     <div id="verse">Click a button to get a verse...</div>
 
- 
+    <div class="mood-buttons">
+      <button class="btn happy" onclick="showVerse('happy')">Happy</button>
+      <button class="btn sad" onclick="showVerse('sad')">Sad</button>
+      <button class="btn angry" onclick="showVerse('angry')">Angry</button>
+      <button class="btn thankful" onclick="showVerse('thankful')">
+        Thankful
+      </button>
+      <button class="btn hopeful" onclick="showVerse('hopeful')">
+        Hopeful
+      </button>
+      <button class="btn troubled" onclick="showVerse('troubled')">
+        Troubled
+      </button>
+    </div>
 
     <script>
       const verses = {
