--- a/index.html
+++ b/index.html
@@ -169,6 +169,9 @@
         angry: [
           "In your anger do not sin. – Ephesians 4:26",
           "A gentle answer turns away wrath. – Proverbs 15:1",
+          "With God all things are possible." – Matthew 19:26,
+        "You will keep in perfect peace those whose minds are steadfast, because they trust in you." – Isaiah 26:3,
+          
         ],
         thankful: ["Give thanks to the Lord, for he is good. – Psalm 107:1"],
         hopeful: [
