--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   </head>
   <body>
     <img
-      src="https://img.tripi.vn/cdn-cgi/image/width=700,height=700/https://gcs.tripi.vn/public-tripi/tripi-feed/img/482743NYZ/anh-mo-ta.png"
+      src="https://img.tripi.vn/cdn-cgi/image/width=700,height=700/https://t3.ftcdn.net/jpg/01/82/36/22/360_F_182362279_mftijArjVNEa8ngWA8JN9hCome8zJTqw.jpg"
       class="header-image"
       alt="Jesus"
     />
@@ -169,11 +169,18 @@
         angry: [
           "In your anger do not sin. – Ephesians 4:26",
           "A gentle answer turns away wrath. – Proverbs 15:1",
-          "With God all things are possible." – Matthew 19:26,
-        "You will keep in perfect peace those whose minds are steadfast, because they trust in you." – Isaiah 26:3,
+          "With God all things are possible. – Matthew 19:26",
+          "You will keep in perfect peace those whose minds are steadfast, because they trust in you. – Isaiah 26:3",
+          "For the Lord gives wisdom; from his mouth come knowledge and understanding. – Proverbs 2:6",
           
         ],
-        thankful: ["Give thanks to the Lord, for he is good. – Psalm 107:1"],
+        thankful: [
+          "Give thanks to the Lord, for he is good. – Psalm 107:1"
+          "Thanks be to God for his indescribable gift! – 2 Corinthians 9:15",
+          "I will give thanks to the Lord because of his righteousness; I will sing the praises of the name of the Lord Most High. – Psalm 7:17",
+          "Let everything that has breath praise the Lord. Praise the Lord. – Psalm 150:6",
+          "Enter his gates with thanksgiving and his courts with praise; give thanks to him and praise his name. – Psalm 100:4",
+        ],
         hopeful: [
           "For I know the plans I have for you, declares the Lord. – Jeremiah 29:11",
         ],
