--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
           
         ],
         thankful: [
-          "Give thanks to the Lord, for he is good. – Psalm 107:1"
+          "Give thanks to the Lord, for he is good. – Psalm 107:1",
           "Thanks be to God for his indescribable gift! – 2 Corinthians 9:15",
           "I will give thanks to the Lord because of his righteousness; I will sing the praises of the name of the Lord Most High. – Psalm 7:17",
           "Let everything that has breath praise the Lord. Praise the Lord. – Psalm 150:6",
