--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       alt="Jesus"
     />
     <h1>Bible Verses For The Moment</h1>
-    <h2>READ ME WHEN</h2>
+   /* <h2>READ ME WHEN</h2> */
 
     <div id="verse">Click a button to get a verse...</div>
 
