--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
       alt="Jesus"
     />
     <h1>Bible Verses For The Moment</h1>
-   /* <h2>READ ME WHEN</h2> */
+    
 
     <div id="verse">Click a button to get a verse...</div>
-
+    <h2>READ ME WHEN</h2>
     <div class="mood-buttons">
       <button class="btn happy" onclick="showVerse('happy')">Happy</button>
       <button class="btn sad" onclick="showVerse('sad')">Sad</button>
