--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
         font-family: Arial, sans-serif;
         text-align: center;
         margin: 0;
-        background: linear-gradient(to bottom, #fdf6e3, #e5e5e5);
+        /*ackground: linear-gradient(to bottom, #fdf6e3, #e5e5e5);*/
+        background: url('https://wallpaperbat.com/img/293562-follow-your-own-light-sunset-wallpaper-beach-sunset-wallpaper.jpg') no-repeat center center fixed;
+        background-size: cover;
+        
         min-height: 100vh;
         color: #333;
         display: flex;
