--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         text-align: center;
         margin: 0;
         /*ackground: linear-gradient(to bottom, #fdf6e3, #e5e5e5);*/
-        background: url('https://wallpaperbat.com/img/293562-follow-your-own-light-sunset-wallpaper-beach-sunset-wallpaper.jpg') no-repeat center center fixed;
+        background: url('293562-follow-your-own-light-sunset-wallpaper-beach-sunset-wallpaper.jpg') no-repeat center center fixed;
         background-size: cover;
         
         min-height: 100vh;
