--- a/index.html
+++ b/index.html
@@ -71,19 +71,19 @@
         color: #000;
       }
       .angry {
-        background-color: #ec4d2e;
+        background-color: #f4c542;
       }
       .thankful {
-        background-color: #c063c7;
+        background-color: #f4c542;
       }
       .hopeful {
-        background-color: #62bb7d;
+        background-color: #f4c542;
       }
       .sad {
-        background-color: #537dd6;
+        background-color: #f4c542;
       }
       .troubled {
-        background-color: #e7c441;
+        background-color: #f4c542;
         color: #000;
       }
 
@@ -95,11 +95,7 @@
     </style>
   </head>
   <body>
-    <img
-      src="https://img.tripi.vn/cdn-cgi/image/width=700,height=700/https://t3.ftcdn.net/jpg/01/82/36/22/360_F_182362279_mftijArjVNEa8ngWA8JN9hCome8zJTqw.jpg"
-      class="header-image"
-      alt="Jesus"
-    />
+    
     <h1>Bible Verses For The Moment</h1>
     
 
