--- a/index.html
+++ b/index.html
@@ -72,15 +72,19 @@
       }
       .angry {
         background-color: #f4c542;
+        color: #000;
       }
       .thankful {
         background-color: #f4c542;
+        color: #000;
       }
       .hopeful {
         background-color: #f4c542;
+        color: #000;
       }
       .sad {
         background-color: #f4c542;
+        color: #000;
       }
       .troubled {
         background-color: #f4c542;
@@ -95,7 +99,11 @@
     </style>
   </head>
   <body>
-    
+    <img
+      src="https://img.tripi.vn/cdn-cgi/image/width=700,height=700/https://t3.ftcdn.net/jpg/01/82/36/22/360_F_182362279_mftijArjVNEa8ngWA8JN9hCome8zJTqw.jpg"
+      class="header-image"
+      alt="Jesus"
+    />
     <h1>Bible Verses For The Moment</h1>
     
 
