--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         text-align: center;
         margin: 0;
         /* background: linear-gradient(to bottom, #fdf6e3, #e5e5e5); */
-        background: url('https://t3.ftcdn.net/jpg/01/82/36/22/360_F_182362279_mftijArjVNEa8ngWA8JN9hCome8zJTqw.jpg') no-repeat center center fixed;
+        /*background: url('https://t3.ftcdn.net/jpg/01/82/36/22/360_F_182362279_mftijArjVNEa8ngWA8JN9hCome8zJTqw.jpg') no-repeat center center fixed;*/
+        background: 293562-follow-your-own-light-sunset-wallpaper-beach-sunset-wallpaper.jpg;
         background-size: cover;
         min-height: 100vh;
         color: #333;
