--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       class="header-image"
       alt="Jesus"
     />
-    <h1>Bible Verses For The Moment</h1>
+    <h1>The Healing Words</h1>
 
     <div id="verse">Loading verses...</div>
     <h2>READ ME WHEN</h2>
