--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         margin: 0;
         /* background: linear-gradient(to bottom, #fdf6e3, #e5e5e5); */
         /*background: url('https://t3.ftcdn.net/jpg/01/82/36/22/360_F_182362279_mftijArjVNEa8ngWA8JN9hCome8zJTqw.jpg') no-repeat center center fixed;*/
-        background: 293562-follow-your-own-light-sunset-wallpaper-beach-sunset-wallpaper.jpg;
+        background: url('293562-follow-your-own-light-sunset-wallpaper-beach-sunset-wallpaper.jpg');
         background-size: cover;
         min-height: 100vh;
         color: #333;
