--- a/index.html
+++ b/index.html
@@ -28,13 +28,16 @@
 
       h1 {
         margin: 16px 0 10px;
-        font-size: 16px;
+        font-size: 24px;
         font-weight: bold;
+        color: #000000;
       }
 
       h2 {
         font-size: 20px;
         margin-bottom: 12px;
+        /* Thay đổi màu chữ cho tiêu đề phụ */
+        color: #000000; /* Ví dụ: màu vàng */
       }
 
       #verse {
