--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
         margin: 16px 0 10px;
         font-size: 24px;
         font-weight: bold;
-        color: #000000;
+        color: #ffffff;
       }
 
       h2 {
         font-size: 20px;
         margin-bottom: 12px;
         /* Thay đổi màu chữ cho tiêu đề phụ */
-        color: #000000; /* Ví dụ: màu vàng */
+        color: #ffffff; /* Ví dụ: màu trắng */
       }
 
       #verse {
