--- a/index.html
+++ b/index.html
@@ -42,20 +42,20 @@
         font-size: 22px; /* Ví dụ: 22px */
         margin-bottom: 12px;
         /* Thay đổi màu chữ cho tiêu đề phụ */
-        color: #ffcc00; /* Ví dụ: màu vàng */
+        color: #ffffff; /* Ví dụ: màu vàng */
       }
 
       #verse {
         margin: 16px;
         font-style: italic;
         /* Thay đổi cỡ chữ cho câu trích dẫn/Kinh thánh */
-        font-size: 24px; /* Ví dụ: 24px */
+        font-size: 18px; /* Ví dụ: 24px */
         max-width: 90%;
         background: rgba(255, 255, 255, 0.7);
         padding: 12px;
         border-radius: 10px;
         /* Thay đổi màu chữ cho câu trích dẫn/Kinh thánh */
-        color: #0056b3; /* Ví dụ: màu xanh đậm */
+        color: #ffffff; /* Ví dụ: màu xanh đậm */
       }
 
       .mood-buttons {
