--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       .hopeful,
       .sad,
       .troubled {
-        background-color: #f4c542; /* Màu nền của nút */
+        background-color: #fcf1d8; /* Màu nền của nút */
         color: #000; /* Màu chữ của nút (hiện đang là đen) */
       }
 
